# pypkg-template

./: .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  issue_template.md
.github/workflows/: ci.yaml  docs.yaml
mkdocs/: gen_ref_pages.py  hooks.py  mkdocs.yaml
tests/: test_placeholder.py
tests/unit/: test_placeholder.py
thispackage/: __init__.py  _version.py
