[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thispackage-name"
description = ""
readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = {file = "LICENSE"}
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
build = ["uv ~= 0.8.17"]

#[project.scripts]
#thispackage = "thispackage.cli:main"

[project.urls]
Homepage = "https://paddy74.github.io/thispackage-name/"
Changelog = "https://paddy74.github.io/thispackage-name/about/changelog/"
Documentation = "https://paddy74.github.io/thispackage-name/"
Source = "https://github.com/paddy74/thispackage-name/"

[tool.hatch.version]
path = "thispackage/_version.py"
[tool.hatch.build.targets.wheel]
packages = ["thispackage"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.11",
]
docs = [
    "mkdocs-extrafiles>=1.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.1",
]

[tool.semantic_release]
branch = "main"
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
version_variables = ["thispackage/_version.py:__version__"]
commit_message = "chore: release v{version}"
allow_zero_version = true
major_on_zero = true

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "build", "perf"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["thispackage"]
relative_files = true

[tool.coverage.paths]
source = [
    "thispackage",
    "*/site-packages/thispackage",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
